BlackJack01 Card & Deck classes

--- a/BlackJack01.ipynb
+++ b/BlackJack01.ipynb
@@ -54,15 +54,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
     "\n",
-    "suits = pass\n",
-    "ranks = pass\n",
-    "values = pass\n",
+    "suits = ('Hearts', 'Diamonds', 'Spades', 'Clubs')\n",
+    "ranks = ('Two', 'Three', 'Four', 'Five', 'Six', 'Seven', 'Eight', 'Nine', 'Ten', 'Jack', 'Queen', 'King', 'Ace')\n",
+    "values = {'Two':2, 'Three':3, 'Four':4, 'Five':5, 'Six':6, 'Seven':7, 'Eight':8, 'Nine':9, 'Ten':10, 'Jack':10,\n",
+    "         'Queen':10, 'King':10, 'Ace':11}\n",
     "\n",
     "playing = True"
    ]
@@ -85,17 +86,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Card:\n",
     "    \n",
-    "    def __init__(self):\n",
-    "        pass\n",
+    "    def __init__(self,suit,rank):\n",
+    "        self.suit = suit\n",
+    "        self.rank = rank\n",
     "    \n",
     "    def __str__(self):\n",
-    "        pass"
+    "        return self.rank+ \" of\" +self.suit"
    ]
   },
   {
@@ -114,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,16 +126,20 @@
     "        self.deck = []  # start with an empty list\n",
     "        for suit in suits:\n",
     "            for rank in ranks:\n",
-    "                pass\n",
+    "                self.deck.append(Card(suit,rank))\n",
     "    \n",
     "    def __str__(self):\n",
-    "        pass\n",
+    "        deck_comp = ''\n",
+    "        for card in self.deck:\n",
+    "            deck_comp += '\\n' + card.__str__()\n",
+    "        return \"The deck has: \"+deck_comp\n",
     "\n",
     "    def shuffle(self):\n",
     "        random.shuffle(self.deck)\n",
     "        \n",
     "    def deal(self):\n",
-    "        pass"
+    "        single_card = self.deck.pop()\n",
+    "        return single_card"
    ]
   },
   {
@@ -145,11 +151,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The deck has: \n",
+      "Ten ofDiamonds\n",
+      "Eight ofDiamonds\n",
+      "Queen ofDiamonds\n",
+      "Three ofDiamonds\n",
+      "Two ofDiamonds\n",
+      "Six ofSpades\n",
+      "Nine ofDiamonds\n",
+      "Ace ofSpades\n",
+      "Jack ofClubs\n",
+      "Six ofDiamonds\n",
+      "Ten ofClubs\n",
+      "Eight ofClubs\n",
+      "King ofHearts\n",
+      "Seven ofClubs\n",
+      "Six ofClubs\n",
+      "Ten ofSpades\n",
+      "Nine ofClubs\n",
+      "Ten ofHearts\n",
+      "Three ofSpades\n",
+      "Ace ofDiamonds\n",
+      "Three ofHearts\n",
+      "Seven ofHearts\n",
+      "Ace ofClubs\n",
+      "King ofClubs\n",
+      "Queen ofSpades\n",
+      "Jack ofDiamonds\n",
+      "Nine ofHearts\n",
+      "Three ofClubs\n",
+      "Six ofHearts\n",
+      "Four ofSpades\n",
+      "Queen ofClubs\n",
+      "Four ofClubs\n",
+      "Eight ofHearts\n",
+      "King ofSpades\n",
+      "Four ofHearts\n",
+      "Nine ofSpades\n",
+      "Jack ofHearts\n",
+      "King ofDiamonds\n",
+      "Four ofDiamonds\n",
+      "Two ofSpades\n",
+      "Two ofHearts\n",
+      "Seven ofSpades\n",
+      "Five ofSpades\n",
+      "Five ofDiamonds\n",
+      "Five ofClubs\n",
+      "Seven ofDiamonds\n",
+      "Jack ofSpades\n",
+      "Ace ofHearts\n",
+      "Queen ofHearts\n",
+      "Two ofClubs\n",
+      "Eight ofSpades\n",
+      "Five ofHearts\n"
+     ]
+    }
+   ],
    "source": [
     "test_deck = Deck()\n",
+    "test_deck.shuffle()\n",
     "print(test_deck)"
    ]
   },
